--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "MIT",
   "devDependencies": {
     "@symfony/webpack-encore": "^0.19.0",
+    "bootstrap": "^4.0.0",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   },
   "dependencies": {
-    "bootstrap-star-rating": "^4.0.2"
+    "popper": "^1.0.1",
+    "popper.js": "^1.12.9"
   }
 }
